--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch":"PORT=5000 nodemon src/server.js",
-    "start":"PORT=5000 node src/server.js"
+    "watch": "PORT=5000 nodemon src/server.js",
+    "start": "PORT=5000 node src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "mysql": "^2.18.1"
   }
